--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>KEYBOARD</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+
+
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
